tests/test_exception/good/same_label_two_variables.catala_en
## Test

```catala
declaration scope A:
  context output x content integer
  context output y content integer
  context output z content integer

scope A:
  label base
  definition x equals -1

  label base
  definition y equals 1

  exception base
  definition x under condition z = 0 consequence equals 0

  definition z equals 0
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
